<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_curve"
    android:fitsSystemWindows="true"  tools:context=".signin"> <ImageButton
    android:id="@+id/btnBack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:src="@drawable/btnback"
    android:layout_marginStart="16dp"  android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tvSignUp"
                style="@style/HeadingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textSize="50sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/tvSubHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/start_your_budgeting_journey"
                android:textColor="@color/colorGreys"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvEmailLabelUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email"
                android:textColor="@color/colorGreys"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailUp"
                style="@style/CustomTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/enter_your_email"
                android:textColorHint="@color/colorGrey"
                app:boxStrokeColor="@color/outline_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPasswordLabelUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/colorGreys"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordUp"
                style="@style/CustomTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/colorGrey"
                app:boxStrokeColor="@color/outline_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="@color/colorGreys" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvConPasswordLabelUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Confirm Password"
                android:textColor="@color/colorGreys"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConPasswordUp"
                style="@style/CustomTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="Confirm Your Password"
                android:textColorHint="@color/colorGrey"
                app:boxStrokeColor="@color/outline_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConPasswordUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="@color/colorGreys" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/CustomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/sign_up"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>